[package]
name = "dex-client"
version = "0.1.1"
authors = ["Shigeo NAKAMURA <nakamura_shigeo@yahoo.com>"]
edition = "2021"
description = "Utility functions for dex trading"
documentation = "https://docs.rs/dex-client/"
homepage = "https://crates.io/crates/dex-client"
repository = "https://github.com/shigeo-nakamura/dex-client"
license = "MIT"

[dependencies]
chrono = "0.4.24"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
